# ufc-predictor

./: .env.example  .gitignore  AGENT_README.md  BACKTEST_SYSTEM_DOCUMENTATION.md  BETTING_STRATEGY_ANALYSIS.md  BET_TRACKING_GUIDE.md  BET_TRACKING_SYSTEM_README.md  CLAUDE.md  COMMAND_REFERENCE.md  ELO_INTEGRATION_SUMMARY.md  HANDOVER_HISTORICAL_BACKTESTING.md  HANDOVER_NOTE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MULTI_BET_GUIDE.md  NOTEBOOK_USAGE.md  OPTIMAL_BETTING_STRATEGY.md  OPTIMIZATION_RESULTS.md  PHASE_2A_PROGRESS_TRACKER.md  PRODUCTION_ENSEMBLE_MIGRATION_GUIDE.md  PROFITABILITY_GUIDE.md  QUICK_START.md  README.md  SCRAPER_OPTIMIZATION_GUIDE.md  TEMPORAL_SPLIT_GUIDE.md  TEMPORAL_VALIDATION_FIX.md  TESTING_GUIDE.md  UFCFightPredictor_README.md  UFC_ELO_SYSTEM_GUIDE.md  UFC_Enhanced_Card_Analysis.ipynb  UFC_MODEL_ANALYSIS_FOR_LLM.md  UFC_Predictions_Clean.ipynb  ULTRATHINK_MODEL_STRATEGY.md  UPDATE_RESULTS_GUIDE.md  VALIDATION_SECURITY_REPORT.md  WALK_FORWARD_VALIDATION_GUIDE.md  WORKTREE_WORKFLOW.md  apply_optimal_settings.py  autonomous_pipeline.py  backtest_temporal_model.py  (+114 more)
analysis_exports/: betting_sheet_20250726_182006.md  betting_sheet_20250726_183739.md  betting_sheet_20250726_203843.md  betting_sheet_20250727_010632.md  betting_sheet_20250727_011558.md  betting_sheet_20250727_014013.md  betting_sheet_20250727_014630.md  betting_sheet_20250727_030257.md  ufc_analysis_20250726_182006.json  ufc_analysis_20250726_183739.json  ufc_analysis_20250726_190107.json  ufc_analysis_20250726_190214.json  ufc_analysis_20250726_190310.json  ufc_analysis_20250726_192952.json  ufc_analysis_20250726_193003.json  ufc_analysis_20250726_193020.json  ufc_analysis_20250726_195002.json  ufc_analysis_20250726_202509.json  ufc_analysis_20250726_203843.json  ufc_analysis_20250727_010632.json  ufc_analysis_20250727_011558.json  ufc_analysis_20250727_014013.json  ufc_analysis_20250727_014630.json  ufc_analysis_20250727_030257.json
artifacts/: proper_backtest_results.csv
config/: betting_strategy_config.json  model_config.py  quota_config.json
configs/: __init__.py  backtest.yaml  calibration_config.py  features.yaml
docs/: FEATURE_SELECTION_GUIDE.md  GETTING_STARTED.md  PROBABILITY_CALIBRATION_GUIDE.md  SOPHISTICATED_MULTI_BET_SYSTEM.md  conversational_integration_architecture.md  integration_summary.md  stacking_ensemble_guide.md
(+248 files in other folders)
