[project]
name = "ufc-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.34.2",
    "xgboost>=2.1.4",
]
